@@ -1,5 +1,12 @@
 2007-05-05  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/modtypes/tarball.py, jhbuild/versioncontrol/tarball.py:
+	replaced call to which by call to command -v to determine if wget
+	or curl are available; so it should work on any sh-compatible shell,
+	and on Mac OS X (followup to #301259)
+
+2007-05-05  Frederic Peters  <fpeters@0d.be>
+
 	* jhbuild/modtypes/perl.py: respect makeargs attribute, and do some
 	${prefix} substitution; patch by Richard Hult (closes: #436170)
 
